[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Snake/Snake.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Pickup.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/PauseScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/StartMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/audioOn.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 288 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 480, 16 )

[node name="World" type="Node"]
pause_mode = 2
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartMenu" parent="CanvasLayer" instance=ExtResource( 6 )]
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0

[node name="FPSLabel" type="Label" parent="CanvasLayer"]
anchor_left = 0.056
anchor_top = 1.0
anchor_right = 0.056
anchor_bottom = 1.0
margin_left = -0.256001
margin_top = -32.0
margin_right = 31.744
text = "FPS: "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="CanvasLayer"]
anchor_left = 0.056
anchor_right = 0.056
margin_left = -0.256001
margin_right = 63.744
margin_bottom = 32.0
text = "Score: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScreen" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false

[node name="MuteButton" type="Button" parent="CanvasLayer"]
anchor_left = 0.944
anchor_right = 0.944
margin_left = -31.744
margin_right = 0.255981
margin_bottom = 32.0
mouse_default_cursor_shape = 2
action_mode = 0
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Snake" parent="." instance=ExtResource( 2 )]

[node name="Walls" type="Node" parent="."]

[node name="LeftWall" type="Area2D" parent="Walls" groups=[
"walls",
]]
position = Vector2( 16, 288 )
collision_layer = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/LeftWall"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.5, 12 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource( 1 )

[node name="RightWall" type="Area2D" parent="Walls" groups=[
"walls",
]]
position = Vector2( 560, 288 )
collision_layer = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/RightWall"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.5, 12 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource( 1 )

[node name="UpperWall" type="Area2D" parent="Walls" groups=[
"walls",
]]
position = Vector2( 288, 16 )
collision_layer = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/UpperWall"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 18, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/UpperWall"]
shape = SubResource( 2 )

[node name="LowerWall" type="Area2D" parent="Walls" groups=[
"walls",
]]
position = Vector2( 288, 560 )
collision_layer = 4
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Walls/LowerWall"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 18, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LowerWall"]
shape = SubResource( 2 )

[node name="Pickup" parent="." instance=ExtResource( 4 )]
position = Vector2( 48, 48 )

[node name="DeathDelayTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25
one_shot = true

[connection signal="pressed" from="CanvasLayer/StartMenu/MenuList/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="died" from="Snake" to="." method="_on_Snake_died"]
[connection signal="area_entered" from="Pickup" to="." method="_on_Pickup_area_entered"]
[connection signal="timeout" from="DeathDelayTimer" to="." method="_on_DeathDelayTimer_timeout"]

[editable path="CanvasLayer/StartMenu"]
[editable path="Snake"]
